# arguing-agents

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  USAGE.md  aws-access.sh.example  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ConfigForm.tsx  DebateControls.tsx  DebateHistory.tsx  DebateReplay.tsx  DebateTimeline.tsx  EmotionalPanel.tsx  PersonaPanel.tsx  TruncatedTopic.tsx
frontend/src/hooks/: useDebateStream.ts
frontend/src/types/: index.ts
mockups/: 01-config.html  02-persona-review.html  03-debate-live.html
src/multi_agent_debate/: __init__.py  config.py  entrypoint.py  logging.py  main.py  profanity.py
src/multi_agent_debate/api/: __init__.py  _deps.py  audio.py  debates.py  health.py  sessions.py  stream.py
src/multi_agent_debate/debate/: __init__.py  interruption.py  loop.py  session.py  silence.py
src/multi_agent_debate/llm/: __init__.py  rate_limiter.py
src/multi_agent_debate/llm/adapters/: __init__.py  base.py  bedrock.py  ollama.py
src/multi_agent_debate/llm/services/: __init__.py  _json_utils.py  agent.py  (+3 more)
src/multi_agent_debate/models/: __init__.py  agent.py  audio.py  config.py  debate.py  events.py
src/multi_agent_debate/storage/: __init__.py  schema.py  store.py
src/multi_agent_debate/tts/: __init__.py  audio_generator.py  bark_adapter.py  kokoro_adapter.py  polly_adapter.py  voice_assigner.py
tests/: __init__.py  conftest.py
tests/unit/: test_logging.py
